--- a/common/lib/xmodule/xmodule/js/fixtures/video_yt_multiple.html
+++ b/common/lib/xmodule/xmodule/js/fixtures/video_yt_multiple.html
@@ -6,6 +6,7 @@
         class="video closed"
         data-streams="0.5:7tqY6eQzVhE,1.0:cogebirgzzM,1.5:abcdefghijkl"
         data-show-captions="true"
+        data-show-closed-captions="true"
         data-save-state-url="/save_user_state"
         data-speed="1.5"
         data-start=""
@@ -79,6 +80,7 @@
         class="video"
         data-streams="0.75:7tqY6eQzVhE,1.0:cogebirgzzM"
         data-show-captions="true"
+        data-show-closed-captions="true"
         data-speed="1.0"
         data-start=""
         data-end=""
@@ -144,6 +146,7 @@
         class="video"
         data-streams="0.75:7tqY6eQzVhE,1.0:cogebirgzzM"
         data-show-captions="true"
+        data-show-closed-captions="true"
         data-speed="1.0"
         data-start=""
         data-end=""
