--- a/common/lib/xmodule/xmodule/js/fixtures/video.html
+++ b/common/lib/xmodule/xmodule/js/fixtures/video.html
@@ -32,7 +32,14 @@
             <section class="video-player">
               <iframe id="id"></iframe>
             </section>
+            <span tabindex="0" class="hide-captions" role="button" aria-disabled="false"
+                  title="${_('Hide transcripts')}" aria-label="${_('Hide transcripts')}">
+              <i class="icon-caret-right" aria-hidden="true"></i>
+            </span>
             <div class="video-player-post"></div>
+            <section class="closed-caption">
+                <p class="text"></p>
+            </section>
             <section class="video-controls is-hidden">
               <div class="slider"></div>
               <div>
