--- a/common/lib/xmodule/xmodule/js/fixtures/video_yt_multiple.html
+++ b/common/lib/xmodule/xmodule/js/fixtures/video_yt_multiple.html
@@ -32,7 +32,14 @@
             <section class="video-player">
               <iframe id="id1"></iframe>
             </section>
+            <span tabindex="0" class="hide-captions" role="button" aria-disabled="false"
+                  title="${_('Hide transcripts')}" aria-label="${_('Hide transcripts')}">
+              <i class="icon-caret-right" aria-hidden="true"></i>
+            </span>
             <div class="video-player-post"></div>
+            <section class="closed-caption">
+                <p class="text"></p>
+            </section>
             <section class="video-controls is-hidden">
               <div class="slider"></div>
               <div>
@@ -57,7 +64,7 @@
                   <a href="#" class="add-fullscreen" title="Fill browser" role="button" aria-disabled="false">Fill Browser</a>
                   <a href="#" class="quality-control is-hidden" title="HD off" role="button" aria-disabled="false">HD off</a>
                   <div class="lang menu-container">
-                    <a href="#" class="hide-subtitles" title="Turn off captions" role="button" aria-disabled="false">Captions</a>
+                    <a href="#" class="hide-closed-captions" title="Turn off captions" role="button" aria-disabled="false">Captions</a>
                   </div>
                 </div>
               </div>
@@ -100,7 +107,14 @@
             <section class="video-player">
               <iframe id="id2"></iframe>
             </section>
+            <span tabindex="0" class="hide-captions" role="button" aria-disabled="false"
+                  title="${_('Hide transcripts')}" aria-label="${_('Hide transcripts')}">
+              <i class="icon-caret-right" aria-hidden="true"></i>
+            </span>
             <div class="video-player-post"></div>
+            <section class="closed-caption">
+                <p class="text"></p>
+            </section>
             <section class="video-controls">
               <div class="slider"></div>
               <div>
@@ -125,7 +139,7 @@
                   <a href="#" class="add-fullscreen" title="Fill browser">Fill Browser</a>
                   <a href="#" class="quality-control is-hidden" title="HD">HD</a>
                   <div class="lang menu-container">
-                    <a href="#" class="hide-subtitles" title="Turn off captions" role="button" aria-disabled="false">Captions</a>
+                    <a href="#" class="hide-closed-captions" title="Turn off captions" role="button" aria-disabled="false">Captions</a>
                   </div>
                 </div>
               </div>
@@ -166,7 +180,14 @@
             <section class="video-player">
               <iframe id="id3"></iframe>
             </section>
+            <span tabindex="0" class="hide-captions" role="button" aria-disabled="false"
+                  title="${_('Hide transcripts')}" aria-label="${_('Hide transcripts')}">
+              <i class="icon-caret-right" aria-hidden="true"></i>
+            </span>
             <div class="video-player-post"></div>
+            <section class="closed-caption">
+                <p class="text"></p>
+            </section>
             <section class="video-controls">
               <div class="slider"></div>
               <div>
@@ -191,7 +212,7 @@
                   <a href="#" class="add-fullscreen" title="Fill browser">Fill Browser</a>
                   <a href="#" class="quality-control is-hidden" title="HD">HD</a>
                   <div class="lang menu-container">
-                    <a href="#" class="hide-subtitles" title="Turn off captions" role="button" aria-disabled="false">Captions</a>
+                    <a href="#" class="hide-closed-captions" title="Turn off captions" role="button" aria-disabled="false">Captions</a>
                   </div>
                 </div>
               </div>
