More fixes for the tests

--- a/common/lib/xmodule/xmodule/js/fixtures/video.html
+++ b/common/lib/xmodule/xmodule/js/fixtures/video.html
@@ -32,10 +32,10 @@
             <section class="video-player">
               <iframe id="id"></iframe>
             </section>
-            <span tabindex="0" class="hide-captions" role="button" aria-disabled="false"
-                  title="${_('Hide transcripts')}" aria-label="${_('Hide transcripts')}">
+            <a href="#" tabindex="0" class="hide-captions" role="button" aria-disabled="false"
+                  title="${_('Turn off transcripts')}">
               <i class="icon-caret-right" aria-hidden="true"></i>
-            </span>
+            </a>
             <div class="video-player-post"></div>
             <section class="closed-caption">
                 <p class="text"></p>
